--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-  "token": "OTAyODg4NTU5MDA1MDQwNjkw.YXk-fw.kVGexdvLKspEdpau8aloZwAQ43E",
-  "prefix": "!",
+  "token": "TOKEN",
+  "prefix": "!Meda.",
   "database": "database.db",
   "logs_folder": "logs",
   "log_filename": "%Y-%m-%dT%H-%M-%S.txt",
   "embed_color": "#7289DA",
   "description": "A simple ticker for any cryptocurrency",
-  "cryptocurrency_id": "smooth-love-potion",
-  "cryptocurrency_name": "SLP",
+  "cryptocurrency_id": "medacoin",
+  "cryptocurrency_name": "MedaCoin",
   "fiat_id": "usd",
   "fiat_name": "$",
   "max_ppa": 20,
